# src/dto/bookCollection.dto.ts
@@ -1,3 +1,6 @@
 export interface BookCollectionDTO {
-
+    id?: number;
+    book_id: number;
+    available: boolean;
+    state: number;
 }
